--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>  
     <section class="container">
-        <div class="card">
+        <div class="card">fffffff
             <h3>ciao</h3>f
 
             <img class="statua" src="statua.jpeg" alt="">
