--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>  
     <section class="container">
-        <div class="card">fffffff
-            <h3>ciao</h3>f
+        <div class="card">
+            <h3>ciao</h3>
 
             <img class="statua" src="statua.jpeg" alt="">
 
