--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h3>ciao</h3>
 
             <img class="statua" src="statua.jpeg" alt="">
+        <div class="ciao">
+            gay
+        </div>
 
         </div>
     </section>
